plugins {
    id 'java'
    //id 'org.openjfx.javafxplugin' version '0.0.7'

}

//Statt Plugin das bei der run config unter JVM hinzufügen (Pfad ändern)
//javafx library muss heruntergeladen sein und im Projekt importiert
//--module-path /home/cedric/java_lib/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml

group 'de.uni_hannover.hci.cardgame'
version '1.0-SNAPSHOT'

sourceCompatibility = 12

repositories {
    mavenCentral()
}

sourceSets {
    main{
        resources{
            srcDirs = ["src/main/resources"]
            includes = ["**/*.fxml"]
        }
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'com.google.code.gson:gson:2.8.5'
}

/*javafx {
    version = '12'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}*/

